--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
-<!-- This site was created in Webflow. http://www.webflow.com--><!-- Last Published: Thu Nov 07 2013 13:04:08 GMT+0000 (UTC) -->
-<html data-wf-site="52711032977049290f000292">
-  <head>
-    <meta charset="utf-8">
-    <title>The Survival Guide for New Dads - DADDYO app</title>
-    <meta name="description" content="Finding out you're going to be a dad can be a bit overwhelming.  Don't panic, help is at hand.  DADDYO app is the toolkit you need to help you whatever stage you're at.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/webflow.css">
-    <link rel="stylesheet" type="text/css" href="css/daddyoapp-test.webflow.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
-    <script>
-      WebFont.load({
-        google: {
-          families: ["Bitter:400,700","Arvo:regular,italic,700,700italic"]
-        }
-      });
-    </script>
-    <link rel="icon" type="image/x-icon" href="https://y7v4p6k4.ssl.hwcdn.net/placeholder/favicon.ico"> 
-    <!-- [if lte IE 9]
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript" src="js/webflow.js"></script>
-    -->
-    <!-- [if gte IE 10] <!-->
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" defer></script>
-    <script type="text/javascript" src="js/webflow.js" defer></script>
-    <!-- <![endif]-->
-  </head><body>
-  <!-- Google Tag Manager -->
+<!-- This site was created in Webflow. http://www.webflow.com-->
+<!-- Last Published: Fri Dec 06 2013 14:25:45 GMT+0000 (UTC) -->
+<html data-wf-site="52a198f4599f76de4f000190">
+<head>
+  <meta charset="utf-8">
+  <title>The Survival Guide for New Dads - DADDYO</title>
+  <meta name="description" content="Finding out you're going to be a dad can be a bit overwhelming.  Don't panic, help is at hand.  DADDYO app is just the toolkit you need.">
+  <meta name="keywords" content="new dads, parenting, fatherhood, pregnant, pregnancy, parent, dad, ">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/webflow.css">
+  <link rel="stylesheet" type="text/css" href="css/daddyowebsite1260929.webflow.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+  <script>
+    WebFont.load({
+      google: {
+        families: ["Bitter:400,700", "Indie Flower:regular"]
+      }
+    });
+  </script>
+  <link rel="icon" type="image/x-icon" href="https://y7v4p6k4.ssl.hwcdn.net/5267aedb83541fc1340003e8/fav-icon.ico">
+  <link rel="apple-touch-icon" href="https://y7v4p6k4.ssl.hwcdn.net/5267aedb83541fc1340003e8/300x300.png">
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-45652586-1']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+      var ga = document.createElement('script');
+      ga.type = 'text/javascript';
+      ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
+</head>
+<body>
+<!-- Google Tag Manager -->
 		<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-M6WP3F"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -37,27 +45,162 @@
 		'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 		})(window,document,'script','dataLayer','GTM-M6WP3F');</script>
 		<!-- End Google Tag Manager -->
-  <div></div>
-  <div>
-    <div class="w-container">
-      <div class="w-row">
-        <div class="w-col w-col-4"></div>
-        <div class="w-col w-col-4">
-          <img class="logo mobile" src="images/logo.png" width="168" alt="logo.png">
-        </div>
-        <div class="w-col w-col-4"></div>
+  <div class="w-hidden-main header">
+    <div class="w-hidden-small w-hidden-tiny _960 mobile">
+      <div class="w-hidden-medium header-content mobile">
+        <img class="logo mobile" src="images/logo.png" width="168" alt="logo.png">
       </div>
     </div>
   </div>
-  <div>
-    <div class="w-container">
+  <div class="hero-area mobile">
+    <div class="_960 mobile">
       <div class="w-row">
-        <div class="w-col w-col-4"></div>
-        <div class="w-col w-col-4"><a class="button" href="mailto:labs@iqcontent.com?subject=Daddyo%20-%20Sign%20up%20to%20beta%20test">SIGN UP to beta test</a>
+        <div class="w-col w-col-6">
+          <img class="w-hidden-small w-hidden-tiny hand-mobile mobile landscape" src="images/hand.png" width="330" alt="hand.png">
         </div>
-        <div class="w-col w-col-4"></div>
+        <div class="w-col w-col-6 w-clearfix">
+          <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny line"></div>
+          <div class="header">
+            <img class="daddyo-icon mobile" src="images/Daddyo-logo-icon.png" width="150" alt="Daddyo-logo-icon.png">
+            <img class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny logo mobile" src="images/logo.png" width="168" alt="logo.png">
+          </div>
+          <img class="daddyo-text mobile" src="images/Daddyo-logo-text.png" width="174" alt="Daddyo-logo-text.png">
+          <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny video-thumbnail">
+            <img class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny video" src="images/video-thumbnail.png" alt="video-thumbnail.png">
+          </div><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny button mobile-button" href="#">buy from app store</a>
+          <h1 class="subheading tablet">The survival kit <br>for new dads</h1>
+          <div class="coming-soon-text mobile smartphone">Coming soon to the App Store</div>
+        </div>
       </div>
     </div>
   </div>
+  <div class="about-section">
+    <div class="dark-block mobile">
+      <div class="_960 mobile">
+        <div class="intro-text-box">
+          <h2 class="mobiletext tablet">gonna be a Dad? Prepare to become a pro!</h2>
+        </div>
+      </div>
+    </div>
+    <div class="content-panel">
+      <div class="intro-section mobile">
+        <div class="_960 mobile">
+          <div class="intro-text-box">
+            <p class="intro-text phone">Finding out you're going to be a Dad can be a bit overwhelming, but don't panic, help is at hand. <strong>DADDYO</strong> will give you all the info you need from bump to birth and 6 months on. So, you'll be a great Dad and a great partner.</p>
+          </div>
+        </div>
+      </div>
+      <div class="w-row comic-strip _960">
+        <div class="w-col w-col-6">
+          <div class="comic-box">
+            <img class="comic-images" src="images/books.png" alt="books.png">
+            <h3 class="mobile feature-headings">Distills all the top info into one app</h3>
+            <p class="dark">You don't have to read a huge stack of books. We've crammed everything you need to know into one handy app.</p>
+          </div>
+        </div>
+        <div class="w-col w-col-6">
+          <div class="comic-box">
+            <img class="comic-images" src="images/timeline.png" alt="timeline.png">
+            <h3 class="feature-headings mobile"><span style="background-color: rgba(0, 0, 0, 0);">FOLLOW THE TIMELINE</span></h3>
+            <p class="dark">Use the timeline to get the right info you need when you need it. DADDYO app is designed to help you from the first trimester through to caring for your baby in the first 6 months.</p>
+          </div>
+        </div>
+      </div>
+      <div class="w-row comic-strip _960">
+        <div class="w-col w-col-6">
+          <div class="comic-box"></div>
+          <img class="comic-images" src="images/you.png" alt="you.png">
+          <h3 class="mobile feature-headings">PRO-TIPS FROM GUYS WHO'VE BEEN THERE</h3>
+          <p class="dark">Get the real stuff you need to know, from dads who've learnt the hard way so you don't have to.</p>
+        </div>
+        <div class="w-col w-col-6">
+          <div class="comic-box"></div>
+          <img class="comic-images" src="images/nappies.png" alt="nappies.png">
+          <h3 class="mobile feature-headings">SIMPLE PRACTICAL HOW-TOS</h3>
+          <p class="dark">We've broken things down into simple steps so you can be prepared for any situation that might be thrown at you.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="intro-section about">
+    <div class="_960 mobile">
+      <div class="intro-text-box">
+        <div class="w-row">
+          <div class="w-col w-col-6">
+            <img class="tom mobile-pic" src="images/0.1-about-app.png" alt="0.1-about-app.png">
+          </div>
+          <div class="w-col w-col-6">
+            <h3 class="about heading">About the app</h3>
+            <p class="dark about mobile-padding">The app was originated by iQ Content’s Tom Cunningham, whose personal experience was the catalyst:</p>
+            <p class="dark quote">“As a first time dad, I found the books to be a bit of a chore. I wanted something that showed me how to be a good dad and was always there just when I needed it. That's why we created DADDYO."</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="quotes">
+      <div class="_960 mobile">
+        <div class="w-row w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny quotes-columns">
+          <div class="w-col w-col-3">
+            <div class="quote-logo-placeholder">
+              <div class="quote-loogo-text">Logo goes here</div>
+            </div>
+            <h3>joe.ie</h3>
+            <p class="review-quote">"If Jesus were alive today he would buy Daddyo."</p>
+          </div>
+          <div class="w-col w-col-3">
+            <div class="quote-logo-placeholder">
+              <div class="quote-loogo-text">Logo goes here</div>
+            </div>
+            <h3>website 2</h3>
+            <p class="review-quote">"Daddyo has improved my life 60% of the time all of the time."</p>
+          </div>
+          <div class="w-col w-col-3">
+            <div class="quote-logo-placeholder">
+              <div class="quote-loogo-text">Logo goes here</div>
+            </div>
+            <h3>website 3</h3>
+            <p class="review-quote">"It's believed Superman can deflect kryptonite with the power of the Daddyo app alone."</p>
+          </div>
+          <div class="w-col w-col-3">
+            <div class="quote-logo-placeholder">
+              <div class="quote-loogo-text">Logo goes here</div>
+            </div>
+            <h3>website 4</h3>
+            <p class="review-quote">"I didn't use Daddyo and my life is now garbage etc."</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer mobile">
+    <div class="w-row">
+      <div class="w-col w-col-6">
+        <h3 class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny footer-heading">Get it now for €0.99 on the app store.</h3>
+      </div>
+      <div class="w-col w-col-6 w-clearfix"><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny button mobile-button" href="#">buy from app store</a>
+      </div>
+    </div>
+    <div class="w-row footer-link-cols">
+      <div class="w-col w-col-3">
+        <a class="w-inline-block iq-logo" href="http://www.iqcontent.com" target="_blank">
+          <img class="iq-content mobile" src="images/iqlogox2.png" width="150" alt="iqlogox2.png">
+        </a>
+      </div>
+      <div class="w-col w-col-3">
+        <h5 class="smartphone">Contact us</h5><a class="footer-links smartphone links" href="#">labs@iqcontent.com</a>
+      </div>
+      <div class="w-col w-col-3">
+        <h5 class="smartphone">Twitter</h5>
+        <div class="w-widget w-widget-twitter twitter-widget smartphone">
+          <iframe src="https://platform.twitter.com/widgets/follow_button.html#screen_name=daddyoapp&amp;show_count=true&amp;size=m&amp;show_screen_name=true&amp;dnt=true" scrolling="no" frameborder="0" allowtransparency="true" style="border: none; overflow: hidden; width: 100%; height: 20px;"></iframe>
+        </div>
+      </div>
+      <div class="w-col w-col-3">
+        <h5 class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny">Facebook</h5><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny footer-links" href="#">labs@iqcontent.com</a>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="js/webflow.js"></script>
 </body>
 </html>
