--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </a>
       </div>
       <div class="w-col w-col-3">
-        <h5 class="smartphone">Contact us</h5><a class="footer-links smartphone links" href="#">labs@iqcontent.com</a>
+        <h5 class="smartphone">Contact us</h5><a class="footer-links smartphone links" href="mailto:labs@iqcontent.com?subject=Daddyo%20Support">labs@iqcontent.com</a>
       </div>
       <div class="w-col w-col-3">
         <h5 class="smartphone">Twitter</h5>
@@ -196,7 +196,7 @@
         </div>
       </div>
       <div class="w-col w-col-3">
-        <h5 class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny">Facebook</h5><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny footer-links" href="#">labs@iqcontent.com</a>
+        <h5 class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny">Facebook</h5><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny footer-links" href="*"">labs@iqcontent.com</a>
       </div>
     </div>
   </div>
