Added in link to AppStore

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Fri Dec 06 2013 14:25:45 GMT+0000 (UTC) -->
+<!-- Last Published: Wed Dec 11 2013 10:06:04 GMT+0000 (UTC) -->
 <html data-wf-site="52a198f4599f76de4f000190">
 <head>
   <meta charset="utf-8">
-  <title>The Survival Guide for New Dads - DADDYO</title>
+  <title>The Survival Kit for New Dads - DADDYO</title>
   <meta name="description" content="Finding out you're going to be a dad can be a bit overwhelming.  Don't panic, help is at hand.  DADDYO app is just the toolkit you need.">
   <meta name="keywords" content="new dads, parenting, fatherhood, pregnant, pregnancy, parent, dad, ">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,19 +21,6 @@
   </script>
   <link rel="icon" type="image/x-icon" href="https://y7v4p6k4.ssl.hwcdn.net/5267aedb83541fc1340003e8/fav-icon.ico">
   <link rel="apple-touch-icon" href="https://y7v4p6k4.ssl.hwcdn.net/5267aedb83541fc1340003e8/300x300.png">
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-45652586-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-      var ga = document.createElement('script');
-      ga.type = 'text/javascript';
-      ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
 </head>
 <body>
 <!-- Google Tag Manager -->
@@ -44,7 +31,7 @@
 		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 		})(window,document,'script','dataLayer','GTM-M6WP3F');</script>
-		<!-- End Google Tag Manager -->
+  <!-- End Google Tag Manager -->
   <div class="w-hidden-main header">
     <div class="w-hidden-small w-hidden-tiny _960 mobile">
       <div class="w-hidden-medium header-content mobile">
@@ -69,7 +56,7 @@
             <img class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny video" src="images/video-thumbnail.png" alt="video-thumbnail.png">
           </div><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny button mobile-button" href="#">buy from app store</a>
           <h1 class="subheading tablet">The survival kit <br>for new dads</h1>
-          <div class="coming-soon-text mobile smartphone">Coming soon to the App Store</div>
+          <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny coming-soon-text mobile smartphone">Coming soon to the App Store</div><a class="button" href="https://itunes.apple.com/us/app/daddyo/id775136760?mt=8">Buy now from the app store</a>
         </div>
       </div>
     </div>
@@ -82,7 +69,7 @@
         </div>
       </div>
     </div>
-    <div class="content-panel">
+    <div class="content-panel padding">
       <div class="intro-section mobile">
         <div class="_960 mobile">
           <div class="intro-text-box">
@@ -93,7 +80,7 @@
       <div class="w-row comic-strip _960">
         <div class="w-col w-col-6">
           <div class="comic-box">
-            <img class="comic-images" src="images/books.png" alt="books.png">
+            <img class="comic-images padding" src="images/books.png" alt="books.png">
             <h3 class="mobile feature-headings">Distills all the top info into one app</h3>
             <p class="dark">You don't have to read a huge stack of books. We've crammed everything you need to know into one handy app.</p>
           </div>
@@ -133,6 +120,13 @@
             <h3 class="about heading">About the app</h3>
             <p class="dark about mobile-padding">The app was originated by iQ Content’s Tom Cunningham, whose personal experience was the catalyst:</p>
             <p class="dark quote">“As a first time dad, I found the books to be a bit of a chore. I wanted something that showed me how to be a good dad and was always there just when I needed it. That's why we created DADDYO."</p>
+          </div>
+        </div>
+        <div>
+          <div class="w-row">
+            <div class="w-col w-col-6"></div>
+            <div class="w-col w-col-6 w-clearfix"><a class="button footer-button" href="https://itunes.apple.com/us/app/daddyo/id775136760?mt=8">Buy now from the app store</a>
+            </div>
           </div>
         </div>
       </div>
@@ -187,7 +181,7 @@
         </a>
       </div>
       <div class="w-col w-col-3">
-        <h5 class="smartphone">Contact us</h5><a class="footer-links smartphone links" href="mailto:labs@iqcontent.com?subject=Daddyo%20Support">labs@iqcontent.com</a>
+        <h5 class="smartphone">Contact us</h5><a class="footer-links smartphone links" href="mailto:labs@iqcontent.com?subject=Daddyo%20support">labs@iqcontent.com</a>
       </div>
       <div class="w-col w-col-3">
         <h5 class="smartphone">Twitter</h5>
@@ -196,7 +190,7 @@
         </div>
       </div>
       <div class="w-col w-col-3">
-        <h5 class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny">Facebook</h5><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny footer-links" href="*"">labs@iqcontent.com</a>
+        <h5 class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny">Facebook</h5><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny footer-links" href="#">labs@iqcontent.com</a>
       </div>
     </div>
   </div>
