--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Wed Dec 11 2013 10:06:04 GMT+0000 (UTC) -->
+<!-- Last Published: Fri Dec 13 2013 12:13:09 GMT+0000 (UTC) -->
 <html data-wf-site="52a198f4599f76de4f000190">
 <head>
   <meta charset="utf-8">
@@ -43,12 +43,12 @@
     <div class="_960 mobile">
       <div class="w-row">
         <div class="w-col w-col-6">
-          <img class="w-hidden-small w-hidden-tiny hand-mobile mobile landscape" src="images/hand.png" width="330" alt="hand.png">
+          <img class="w-hidden-small w-hidden-tiny hand-mobile mobile landscape" src="images/hand.png" alt="DADDYO app on iPhone" width="330">
         </div>
         <div class="w-col w-col-6 w-clearfix">
           <div class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny line"></div>
           <div class="header">
-            <img class="daddyo-icon mobile" src="images/Daddyo-logo-icon.png" width="150" alt="Daddyo-logo-icon.png">
+            <img class="daddyo-icon mobile" src="images/Daddyo-logo-icon.png" alt="Daddyo logo" width="150">
             <img class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny logo mobile" src="images/logo.png" width="168" alt="logo.png">
           </div>
           <img class="daddyo-text mobile" src="images/Daddyo-logo-text.png" width="174" alt="Daddyo-logo-text.png">
@@ -65,7 +65,7 @@
     <div class="dark-block mobile">
       <div class="_960 mobile">
         <div class="intro-text-box">
-          <h2 class="mobiletext tablet">gonna be a Dad? Prepare to become a pro!</h2>
+          <h2 class="mobiletext tablet">gonna be a Dad? YOu'll have to learn to survive!</h2>
         </div>
       </div>
     </div>
@@ -73,38 +73,39 @@
       <div class="intro-section mobile">
         <div class="_960 mobile">
           <div class="intro-text-box">
-            <p class="intro-text phone">Finding out you're going to be a Dad can be a bit overwhelming, but don't panic, help is at hand. <strong>DADDYO</strong> will give you all the info you need from bump to birth and 6 months on. So, you'll be a great Dad and a great partner.</p>
+            <p class="intro-text phone">Finding out you're going to be a Dad can be overwhelming. Don't panic, help is at hand. <strong>DADDYO</strong> contains all the essential info a first time dad needs to survive the pregnancy, the birth and the baby's first six months.</p>
           </div>
         </div>
       </div>
       <div class="w-row comic-strip _960">
         <div class="w-col w-col-6">
           <div class="comic-box">
-            <img class="comic-images padding" src="images/books.png" alt="books.png">
-            <h3 class="mobile feature-headings">Distills all the top info into one app</h3>
-            <p class="dark">You don't have to read a huge stack of books. We've crammed everything you need to know into one handy app.</p>
+            <img class="comic-images padding" src="images/books.png" alt="Stack of books">
+            <h3 class="mobile feature-headings">All the info you need, in one app!</h3>
+            <p class="dark">Who has time to read a shelf's worth of pregnancy books? We've crammed all you need to know into one handy app that you can take with you everywhere.</p>
           </div>
         </div>
         <div class="w-col w-col-6">
           <div class="comic-box">
-            <img class="comic-images" src="images/timeline.png" alt="timeline.png">
+            <img class="comic-images" src="images/timeline.png" alt="the timeline on iPhone">
             <h3 class="feature-headings mobile"><span style="background-color: rgba(0, 0, 0, 0);">FOLLOW THE TIMELINE</span></h3>
-            <p class="dark">Use the timeline to get the right info you need when you need it. DADDYO app is designed to help you from the first trimester through to caring for your baby in the first 6 months.</p>
+            <p class="dark">DADDYO is with you from the first trimester, all the way to your baby's six month milestone.
+              <br>Use the timeline to get to the right info, just when you need it.</p>
           </div>
         </div>
       </div>
       <div class="w-row comic-strip _960">
         <div class="w-col w-col-6">
           <div class="comic-box"></div>
-          <img class="comic-images" src="images/you.png" alt="you.png">
+          <img class="comic-images" src="images/you.png" alt="Pro-tips what do you do">
           <h3 class="mobile feature-headings">PRO-TIPS FROM GUYS WHO'VE BEEN THERE</h3>
-          <p class="dark">Get the real stuff you need to know, from dads who've learnt the hard way so you don't have to.</p>
+          <p class="dark">Daddyo was created by first time dads, for first time dads. They learned all the tricks of the trade the hard way, so you can learn them the easy way.</p>
         </div>
         <div class="w-col w-col-6">
           <div class="comic-box"></div>
-          <img class="comic-images" src="images/nappies.png" alt="nappies.png">
+          <img class="comic-images" src="images/nappies.png" alt="Changing nappies topic">
           <h3 class="mobile feature-headings">SIMPLE PRACTICAL HOW-TOS</h3>
-          <p class="dark">We've broken things down into simple steps so you can be prepared for any situation that might be thrown at you.</p>
+          <p class="dark">With over 40 illustrated sections, Daddyo breaks down complicated tasks into simple steps, giving you the confidence to tackle tricky nappy changes and bath time.</p>
         </div>
       </div>
     </div>
@@ -114,11 +115,11 @@
       <div class="intro-text-box">
         <div class="w-row">
           <div class="w-col w-col-6">
-            <img class="tom mobile-pic" src="images/0.1-about-app.png" alt="0.1-about-app.png">
+            <img class="tom mobile-pic" src="images/0.1-about-app.png" alt="Tom the proud dad">
           </div>
           <div class="w-col w-col-6">
             <h3 class="about heading">About the app</h3>
-            <p class="dark about mobile-padding">The app was originated by iQ Content’s Tom Cunningham, whose personal experience was the catalyst:</p>
+            <p class="dark about mobile-padding">Daddyo was created by iQ Labs and Tom Cunningham, coming from Tom's personal experience of becoming a parent:</p>
             <p class="dark quote">“As a first time dad, I found the books to be a bit of a chore. I wanted something that showed me how to be a good dad and was always there just when I needed it. That's why we created DADDYO."</p>
           </div>
         </div>
@@ -177,7 +178,7 @@
     <div class="w-row footer-link-cols">
       <div class="w-col w-col-3">
         <a class="w-inline-block iq-logo" href="http://www.iqcontent.com" target="_blank">
-          <img class="iq-content mobile" src="images/iqlogox2.png" width="150" alt="iqlogox2.png">
+          <img class="iq-content mobile" src="images/iqlogox2.png" alt="iQ Content logo" width="150">
         </a>
       </div>
       <div class="w-col w-col-3">
