Press kit page added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Fri Dec 13 2013 12:13:09 GMT+0000 (UTC) -->
+<!-- Last Published: Mon Dec 16 2013 17:03:59 GMT+0000 (UTC) -->
 <html data-wf-site="52a198f4599f76de4f000190">
 <head>
   <meta charset="utf-8">
@@ -23,15 +23,6 @@
   <link rel="apple-touch-icon" href="https://y7v4p6k4.ssl.hwcdn.net/5267aedb83541fc1340003e8/300x300.png">
 </head>
 <body>
-<!-- Google Tag Manager -->
-		<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-M6WP3F"
-		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-		'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-		})(window,document,'script','dataLayer','GTM-M6WP3F');</script>
-  <!-- End Google Tag Manager -->
   <div class="w-hidden-main header">
     <div class="w-hidden-small w-hidden-tiny _960 mobile">
       <div class="w-hidden-medium header-content mobile">
@@ -181,14 +172,24 @@
           <img class="iq-content mobile" src="images/iqlogox2.png" alt="iQ Content logo" width="150">
         </a>
       </div>
-      <div class="w-col w-col-3">
-        <h5 class="smartphone">Contact us</h5><a class="footer-links smartphone links" href="mailto:labs@iqcontent.com?subject=Daddyo%20support">labs@iqcontent.com</a>
+      <div class="w-col w-col-3 w-clearfix">
+        <h5 class="smartphone">Contact us</h5><a class="footer-links smartphone links" href="mailto:labs@iqcontent.com?subject=Daddyo%20support">labs@iqcontent.com</a><a class="footer-links smartphone links" href="press-kit.html">Press kit</a>
       </div>
       <div class="w-col w-col-3">
         <h5 class="smartphone">Twitter</h5>
         <div class="w-widget w-widget-twitter twitter-widget smartphone">
           <iframe src="https://platform.twitter.com/widgets/follow_button.html#screen_name=daddyoapp&amp;show_count=true&amp;size=m&amp;show_screen_name=true&amp;dnt=true" scrolling="no" frameborder="0" allowtransparency="true" style="border: none; overflow: hidden; width: 100%; height: 20px;"></iframe>
         </div>
+      </div>
+      <div class="w-col w-col-3">
+        <h5 class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny">Facebook</h5><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny footer-links" href="#">labs@iqcontent.com</a>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="js/webflow.js"></script>
+</body>
+</html>        </div>
       </div>
       <div class="w-col w-col-3">
         <h5 class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny">Facebook</h5><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny footer-links" href="#">labs@iqcontent.com</a>
