Fix to Press Kit link

--- a/press-kit.html
+++ b/press-kit.html
@@ -140,7 +140,7 @@
       <div class="w-row">
         <div class="w-col w-col-6">
           <img src="images/you.png" alt="daddyo topic content">
-          <div class="links-block"><a class="image-links" href="http://you-HD.png">Download Hi-Res 1920 x 1080 (811 KB)</a>
+          <div class="links-block"><a class="image-links" href="/press/you-HD.png">Download Hi-Res 1920 x 1080 (811 KB)</a>
           </div>
         </div>
         <div class="w-col w-col-6">
