--- a/press-kit.html
+++ b/press-kit.html
@@ -22,6 +22,15 @@
   <link rel="apple-touch-icon" href="https://y7v4p6k4.ssl.hwcdn.net/5267aedb83541fc1340003e8/300x300.png">
 </head>
 <body>
+<!-- Google Tag Manager -->
+		<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-M6WP3F"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-M6WP3F');</script>
+  <!-- End Google Tag Manager -->
   <div class="hero-area mobile">
     <div class="_960 mobile">
       <div class="w-row">
