Minor update of spelling - DADDYO to caps

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
           <div class="comic-box"></div>
           <img class="comic-images" src="images/you.png" alt="Pro-tips what do you do">
           <h3 class="mobile feature-headings">PRO-TIPS FROM GUYS WHO'VE BEEN THERE</h3>
-          <p class="dark">Daddyo was created by first time dads, for first time dads. They learned all the tricks of the trade the hard way, so you can learn them the easy way.</p>
+          <p class="dark">DADDYO was created by first time dads, for first time dads. They learned all the tricks of the trade the hard way, so you can learn them the easy way.</p>
         </div>
         <div class="w-col w-col-6">
           <div class="comic-box"></div>
           <img class="comic-images" src="images/nappies.png" alt="Changing nappies topic">
           <h3 class="mobile feature-headings">SIMPLE PRACTICAL HOW-TOS</h3>
-          <p class="dark">With over 40 illustrated sections, Daddyo breaks down complicated tasks into simple steps, giving you the confidence to tackle tricky nappy changes and bath time.</p>
+          <p class="dark">With over 40 illustrated sections, DADDYO breaks down complicated tasks into simple steps, giving you the confidence to tackle tricky nappy changes and bath time.</p>
         </div>
       </div>
     </div>
@@ -119,7 +119,7 @@
           </div>
           <div class="w-col w-col-6">
             <h3 class="about heading">About the app</h3>
-            <p class="dark about mobile-padding">Daddyo was created by iQ Labs and Tom Cunningham, coming from Tom's personal experience of becoming a parent:</p>
+            <p class="dark about mobile-padding">DADDYO was created by iQ Labs and Tom Cunningham, coming from Tom's personal experience of becoming a parent:</p>
             <p class="dark quote">“As a first time dad, I found the books to be a bit of a chore. I wanted something that showed me how to be a good dad and was always there just when I needed it. That's why we created DADDYO."</p>
           </div>
         </div>
