Updated contact details on site
Updated contact details on site from Lousie Barry to TomC and Labs@iQ
to Labs@E&O.

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </div>
       </div>
       <div class="w-col w-col-3">
-        <h5 class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny">Facebook</h5><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny footer-links" href="#">labs@iqcontent.com</a>
+        <h5 class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny">Facebook</h5><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny footer-links" href="mailto:Labs@EachAndOther.com">Labs@EachAndOther.com</a>
       </div>
     </div>
   </div>
