--- a/press-kit.html
+++ b/press-kit.html
@@ -95,7 +95,7 @@
       <p class="dark press-release"><strong>Morgan McKeagney, Director of iQ Content</strong> adds:</p>
       <p class="dark press-release">"Well done to Tom and the team on taking a great idea &amp; bringing it to life brilliantly. iQ Content is all about creating brilliant and valuable digital experiences. <strong>Daddyo</strong> is a great example of this: using technology to make
         a special time even better. I wish <strong>Daddyo</strong> was available when I became a Dad! I never read the books, and learned the hard way instead."</p>
-      <p class="dark press-release">If you would like to review the app, please contact <strong>Louise.barry@iqcontent.com</strong> for a free download token.</p>
+      <p class="dark press-release">If you would like to review the app, please contact <strong>Tom.Cunningham@EachAndOther.com</strong> for a free download token.</p>
       <p class="dark press-release">Morgan, Tom and Ciarán are available for interview.</p>
       <div class="divider"></div>
       <h4>iQ Content</h4>
@@ -163,7 +163,7 @@
   <div class="w-container">
     <p class="help">If there's anything else we can help with, please don't hesitate to get in touch.</p>
     <div class="w-embed mail">
-      <p>Email: <a class="bio links" href="mailto:louise.barry@iqcontent.com">louise.barry@iqcontent.com</a>
+      <p>Email: <a class="bio links" href="mailto:Tom.Cunningham@EachAndOther.com">Tom.Cunningham@EachAndOther.com</a>
       </p>
     </div>
     <p class="phone">
@@ -184,7 +184,7 @@
         </a>
       </div>
       <div class="w-col w-col-3">
-        <h5 class="smartphone">Contact us</h5><a class="footer-links smartphone links" href="mailto:labs@iqcontent.com?subject=DADDYO%20support">labs@iqcontent.com</a>
+         <h5 class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny">Facebook</h5><a class="w-hidden-main w-hidden-medium w-hidden-small w-hidden-tiny footer-links" href="mailto:Labs@EachAndOther.com">Labs@EachAndOther.com</a>
       </div>
       <div class="w-col w-col-3">
         <h5 class="smartphone">Twitter</h5>
